Refactoring Java codes