@@ -1,17 +1,11 @@
-public final class ChessBoardCellColor {
+final class ChessBoardCellColor {
 
 	boolean chessBoardCellColor(String cell1, String cell2) {
-	    int[] xy = new int[4];
-	    boolean[][] board = new boolean[8][8];
-	    for(int y = 0, n = 2; y < 8; y++, n++) {
-	        for(int x = 0, m = n; x < 8; x++, m++) {
-	            board[y][x] = (m % 2 == 0);
-	        }
-	    }
-	    xy[0] = cell1.charAt(0) - 'A';
-	    xy[1] = Integer.valueOf(cell1.charAt(1)+"").intValue();
-	    xy[2] = cell2.charAt(0) - 'A';
-	    xy[3] = Integer.valueOf(cell2.charAt(1)+"").intValue();
-	    return (board[xy[0]][xy[1] -= 1] == board[xy[2]][xy[3] -= 1]);
+	    int x1 = cell1.charAt(0) - 'A';
+	    int y1 = new Integer(cell1.charAt(1)+"");
+	    int x2 = cell2.charAt(0) - 'A';
+	    int y2 = new Integer(cell2.charAt(1)+"");
+	    
+	    return (x1 + x2) % 2 == (y1 + y2) % 2;
 	}
 }
