@@ -1,17 +1,15 @@
-public final class DeleteDigit {
+final class DeleteDigit {
 
 	int deleteDigit(int n) {
-	    String ref = n+"";
-	    int max = 0;
-	    for(int i = 0; i < ref.length(); i++) {
-	        String s = "";
-	        int tmp = 0;
-	        for(int j = 0; j < ref.length(); j++) {
-	            if(j != i) { s += ref.charAt(j)+""; }
-	        }
-	        tmp = Integer.valueOf(s).intValue();
-	        if(tmp > max) { max = tmp; }
+	    int max = 0, len = (n+"").length();
+	    
+	    for(int i = 0; i < len; i++) {
+	        String tmp = "";
+	        for(int j = 0; j < len; j++) if(j != i) tmp += (n+"").charAt(j);
+	        int v = new Integer(tmp);
+	        if(v > max) max = v;
 	    }
+	    
 	    return max;
 	}
 }
