@@ -1,16 +1,14 @@
-import java.util.regex.*;
-
-public final class IsIPv4Address {
+final class IsIPv4Address {
 
 	boolean isIPv4Address(String inputString) {
-		String reg = "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}";
-		Matcher mt = Pattern.compile(reg).matcher(inputString);
-		int c = 0;
-		if(mt.matches()) {
-			for(String s : inputString.split("\\.")) {
-				c += (Integer.valueOf(s) > 255) ? 1 : 0;
-			}
-		}
-		return (mt.matches() && c == 0);
+	    String[] split = inputString.split("\\.");
+	    if(split.length != 4) return false;
+	    for(String s : split) {
+	        if(s.matches("\\d*[a-z]+\\d*") || s.length() == 0) return false;
+	        if(s.length() > 1 && (s.charAt(0) == '0' || new Long(s) > 255)) {
+	            return false;   
+	        }
+	    }
+	    return true;
 	}
 }
